# AIESP-IDF

./: .gitignore  CLAUDE.md  CMakeLists.txt  MIGRATION_REFERENCE.md  findings.md  partitions.csv  progress.md  sdkconfig  sdkconfig.defaults  task_plan.md
components/esp-ai/: CMakeLists.txt
components/esp-ai-sd/: CMakeLists.txt
components/esp-ai-sd/include/: esp-ai-sd.h
components/esp-ai-sd/src/: esp-ai-sd.c
components/esp-ai-ui/: CMakeLists.txt  idf_component.yml
components/esp-ai-ui/include/: esp-ai-ui.h
components/esp-ai-ui/src/: esp-ai-ui-jpeg.c  esp-ai-ui-png.cpp  esp-ai-ui.c
components/esp-ai-ui/src/pngdec_wide/: PNGdec.h
components/esp-ai/drivers/: esp-ai-i2s.c  esp-ai-power.c
components/esp-ai/include/: esp-ai.h
components/esp-ai/src/: esp-ai-audio.c  esp-ai-common.c  esp-ai-helix-memory.c  esp-ai-nvs.c  esp-ai-uart.c  esp-ai-ws.c  esp-ai.c
components/esp-ai/src/helix/: assembly.h  buffers.c  dqchan.c  huffman.c  scalfact.c  subband.c
components/esp-ai/src/helix/utils/: Allocator.h  Buffers.h  Vector.h  helix_log.h  helix_memory.cpp  helix_memory.h  helix_pgm.h
components/otakulink_reminder/: CMakeLists.txt
components/otakulink_reminder/include/: otakulink_reminder.h
components/otakulink_reminder/src/: otakulink_reminder.c
components/otakulink_system/: CMakeLists.txt
components/otakulink_system/include/: otakulink_system.h
components/otakulink_system/src/: otakulink_system.c
main/: CMakeLists.txt  idf_component.yml  main.c
